# browseragent-NLPCS6263

./: .coverage  .env.example  .gitignore  CONTRIBUTIONS.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: DATA.md  LOGGING.md  MODELS.md  MODEL_CARD.md  REPRODUCE.md  SPEC.md  STORIES.md  benchmarks.md  usage.md
docs/assets/: demo.txt
docs/diagrams/: architecture.mermaid
grading/: manifest.yaml  traceability.yaml
reports/: benchmarks.json  coverage.xml  git_contributions.txt  integration.xml  regenerate_results.xml  security.txt  unit.xml  user_stories.xml
reports/regenerated/src/browseragent/: __init__.py  agent.py  browser.py  evaluator.py  logging_config.py
scripts/: demo.sh  preflight.sh  regenerate.sh  regenerate_prompt.md
src/browseragent/: __init__.py  agent.py  app.py  browser.py  evaluator.py  logging_config.py
tests/edge/: test_edge.py
tests/integration/: test_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_agent.py  test_app.py  test_evaluator.py
tests/user_stories/: test_stories.py
