[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browseragent"
version = "1.0.0"
description = "Web agent that answers complex questions by browsing live websites"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.3",
    "anthropic==0.29.0",
    "playwright==1.44.0",
    "pillow==10.3.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-xml==0.0.1",
    "junitparser==3.1.3",
    "locust==2.29.0",
    "ruff==0.4.9",
    "black==24.4.2",
    "mypy==1.10.0",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]          # line-too-long handled by black
exclude = ["verl-tool", "eval_script"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '/(verl-tool|eval_script)/'

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["verl-tool", "eval_script", "tests"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--cov=browseragent",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-report=html:reports/coverage_html",
    "--cov-fail-under=70",
]
markers = [
    "unit: fast unit tests (no network)",
    "integration: integration tests (may use network)",
    "user_story: user story acceptance tests",
    "load: load/stress tests",
    "edge: edge case tests",
]
